--- a/TODO
+++ b/TODO
@@ -69,6 +69,7 @@ Unassigned, Realistic (ordered from easiest to hardest)
   - $curl_stuff (maybe not, since this is a library)
   - $verbosity
 
+- rework History panel (and probably all other panels) so that it resizes according to Responsive Design
 - add ability to gunzip torrents coming from some feeds (such as ezRSS.it)
 - make the Interface>Font Size actually affect the entire web UI instead of just the Configuration dialog
 - refresh button in toolbar can trigger Test Hit downloads just like browser refresh
