Forgot to document change from shrink/expand to show/hide for Downloading and Downloaded filter buttons.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -150,7 +150,7 @@ Functional changes
 - consolidated and improved color coding in Feed List, Transmission List, and Legend
 - improved Legend verbiage
 - added back Transmission label to Web UI button
-- added hide/show or shrink/expand UI elements depending on browser window width (does not apply to when phone.css and tablet.css are used)
+- added hide/show UI elements depending on browser window width (does not apply to when phone.css and tablet.css are used)
 - shortened text in footer for narrow screens
 - lightened tints of alternating list rows
 - removed cutesy icons except Transmission's from main button bar and squared off each button's corners
