--- a/CHANGELOG
+++ b/CHANGELOG
@@ -162,17 +162,25 @@ Code changes
 0.2.4
 
 Functional changes
-IN PROGRESS
-- re-style all CSS following Android Material Design principles
+- made Default Seed Ratio global setting be the default seed ratio for the blank New Favorite form
+- minor edits to Favorite Info template's help text
+- added ability to use SSxEE or YYYYMMDD notation to Last Downloaded Episode on the New Favorite form
+- added FeedBurner aggregator of other large anime torrent RSS feeds to default config
 
 Code changes
+- cleaned up CSS warnings caused by filter:progid: entries (for IE8--IE8 support should be removed in the future)
+- removed overlooked CSS background tags referring to missing favorites.png
+- removed switch-case for torrent client, since Transmission is the only supported client
+- fixed Undefined variable: magnet in tor_client.php on line 217
+- completely removed mostly-useless torInfo() in tools.php, leaving the infoDiv updates to Javascript
+- added some twxa_debug() logging to feeds.php
+- fixed minutes declarations and calculations in torrentwatch-xa.js
+- improved logic for creating or recreating Download Dir and made it only attempt to do either if Transmission Host is 127.0.0.1 or localhost
+- removed $func_timer because it does nothing
+- moved /tmp/twlog to /tmp/twxalog
+
 IN PROGRESS
+
+- to_check has different meanings--$matched == to_check for items that are dark grey match_old_download, but yellow match_to_check is Waiting state; might be getting eclipsed by match_nomatch logic
 - continue converting detectItem() if...else control structures to switch...case, breaking out code into separate functions
-- fix 'minutes' is out of scope and similar errors with 'hours' and 'seconds' around torrentwatch-xa.js:511 to :529
-- resolve collision between $torInfo in html.php and torInfo() in tools.php (latter happens only on "move torrent" button click on Transmission filter pane)
-  - remove unused torInfo['status'] (meant to contain Transmission status code) from PHP code, leaving all status updates up to Javascript due to JSON
-  - $torInfo has $torInfo['dlStatus'] but torInfo() has status codes
-  - fixed typo of $torInfo['clientId'] in html.php
-  - removed now-defined but still unused $torInfo['clientId'] in feed_item.tpl
-  - fixed infoDiv's display when $torInfo is not set--now displays if $torInfo['dlStatus'] != ''
 - clean up all the undefined variable PHP notices spewing into the web server error_log, especially from config_lib.php
