--- a/TODO
+++ b/TODO
@@ -5,6 +5,9 @@ Throughout all versions
 
 Bugfixes
 
+- to_check has different meanings--$matched == to_check for items that are dark grey match_old_download, but yellow match_to_check is Waiting state; might be getting eclipsed by match_nomatch logic
+- continue converting detectItem() if...else control structures to switch...case, breaking out code into separate functions
+- clean up all the undefined variable PHP notices spewing into the web server error_log, especially from config_lib.php
 - somehow [HorribleSubs] Norn9 - Norn+Nonet - 09.5 [480p].mkv became 9x5
 - exclamation point doesn't match, as in [HorribleSubs] New Game! - 02 [480p].mkv
 
